--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@sentry/browser": "^5.5.0",
     "axios": "^0.19.0",
+    "enzyme-to-json": "^3.3.5",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
