--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "validator": "^10.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set \"REACT_APP_DEBUG=true\" && react-scripts start",
+    "start:api": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
