--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "@types/jest": "^24.0.15",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.18.2",
     "react-test-renderer": "^16.8.6"
   }
 }
