--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@sentry/browser": "^5.5.0",
     "axios": "^0.19.0",
     "enzyme-to-json": "^3.3.5",
+    "firebase": "^6.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
