--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-transition-group": "^4.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^4.4.1",
     "uuid": "^3.3.2",
     "validator": "^10.11.0"
   },
